# infinity-world

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
docs/: rayon_wasm_guide_ai.md  チャンク.md  ブロック.md  メタパラメータ.md  土壌.md  地形.md  気候区分.md  気温と湿度.md
docs/地形サンプル/: samples.md
lab/: distance.py  env.py
src/: app.rs  biome.wgsl  calc_env.wgsl  camera.rs  chunk.rs  chunk.wgsl  compute.rs  consts.rs  create_terrain.rs  fps.rs  game.rs  gpu.rs  main.rs  noise.rs  pipeline.rs  player.rs  post_process.wgsl  render.rs  render_info.rs  shader.wgsl  state.rs  terrain.rs  terrain.wgsl  types.rs  utils.rs  world.rs
test_out/: infinity-world.js
