[package]
name = "infinity-world"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
env_logger = "0.11.11"
glam = "0.33.1"
half = "2.7.1"
log = "0.4.33"
noise = "0.9.0"
num-traits = "0.2.19"
pollster = "0.4.0"
rand = "0.10.1"
rayon = "1.12.0"
wasm-bindgen-rayon = "1.3.0"
web-time = "1.1.0"
wgpu = "29.0.3"
wgpu_text = "29.0.3"
winit = "0.30.13"
