[package]
name = "infinity-world"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
env_logger = "0.11.11"
getrandom = { version = "0.4.3", features = ["wasm_js"] }
glam = "0.33.1"
half = "2.7.1"
log = "0.4.33"
noise = "0.9.0"
num-traits = "0.2.19"
pollster = "0.4.0"
rayon = "1.12.0"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.56"
wasm-bindgen-rayon = { version = "1.3.0", features = ["no-bundler"] }
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = ["Window", "Document", "Element", "HtmlCanvasElement", "Navigator"] }
web-time = "1.1.0"
wgpu = "29.0.3"
wgpu_text = "29.0.3"
winit = "0.30.13"

[profile.dev]
debug = false
panic = "abort"

[profile.release]
debug = false
panic = "abort"

